more security updates

--- a/appMover/css/appmover.css
+++ b/appMover/css/appmover.css
@@ -1,57 +1,54 @@
-.appMover .navbar-fixed-top
-{
-    margin-left:250px;
+.appMover .navbar-fixed-top {
+    margin-left: 250px;
 }
 
 .appMover #page-content-header {
-    background:#404040;
-    top:0;
-    height:69px;
-    width:100%;
-    line-height: 69px;
-    z-index:1000;
+    background: #404040;
+    top: 0;
+    height: 60px;
+    width: 100%;
 }
 
 .appMover #page-content-body {
-    margin-top: 80px;
+    margin-top: 70px;
     margin-bottom: 50px;
 }
 
 .appMover #page-content-footer {
-   position:fixed;
-   bottom:0px;
-   height:50px;
-   width:100%;
-   background: #8C8C8C;
+    position: fixed;
+    bottom: 0px;
+    height: 50px;
+    width: 100%;
+    background: #8C8C8C;
 }
 
 .appMover #button-bar {
-  position: absolute;
-  top: 50%;
-  left:10px;
-  transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
 }
 
 .appMover .title {
-    color: rgba(255,255,255,0.8);
-    float:left;
+    color: rgba(255, 255, 255, 0.8);
+    float: left;
     font-size: 36px;
-    margin-top:15px;
-    padding-left:15px;
+    margin-top: 10px;
+    padding-left: 15px;
 }
 
 .appMover #left {
-    width:48%;
-    float:left;
-    margin-right:1%;
-    margin-left:1%;
+    width: 48%;
+    float: left;
+    margin-right: 1%;
+    margin-left: 1%;
 }
 
 .appMover #right {
-    width:48%;
-    float:right;
-    margin-right:1%;
-    margin-left:1%;
+    width: 48%;
+    float: right;
+    margin-right: 1%;
+    margin-left: 1%;
 }
 
 .appMover .panel-heading {
